--- a/ansible-playbook/roles/jupyter/files/notebook_templates/experiments/exp.ipynb
+++ b/ansible-playbook/roles/jupyter/files/notebook_templates/experiments/exp.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import time\n",
     "\n",
     "# Change root directory and add paths\n",
     "cwd = os.getcwd()\n",
@@ -36,7 +37,23 @@
     "    sys.path.append(LIB_PATH)\n",
     "\n",
     "# Complete deletion of deleted tasks on mlflow ui\n",
-    "!poetry run mlflow gc"
+    "!poetry run mlflow gc\n",
+    "\n",
+    "# Measure processing time\n",
+    "start_time = time.perf_counter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change pandas display max\n",
+    "import pandas as pd\n",
+    "\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -108,6 +125,30 @@
     "experiment_dict[notebook] = {'experiment_id': experiment_id, 'run_id': run_id}\n",
     "with open(experiment_conf_file, 'w') as f:\n",
     "    json.dump(experiment_dict, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elapsed_time = int(time.perf_counter() - start_time)\n",
+    "\n",
+    "# convert second to hour, minute and seconds\n",
+    "elapsed_hour = elapsed_time // 3600\n",
+    "elapsed_minute = (elapsed_time % 3600) // 60\n",
+    "elapsed_second = (elapsed_time % 3600 % 60)\n",
+    "\n",
+    "# print as 00:00:00\n",
+    "print(str(elapsed_hour).zfill(2) + \":\" + str(elapsed_minute).zfill(2) + \":\" + str(elapsed_second).zfill(2))"
    ]
   }
  ],
