--- a/ansible-playbook/roles/jupyter/files/notebook_templates/experiments/exp.ipynb
+++ b/ansible-playbook/roles/jupyter/files/notebook_templates/experiments/exp.ipynb
@@ -37,7 +37,7 @@
     "    sys.path.append(LIB_PATH)\n",
     "\n",
     "# Complete deletion of deleted tasks on mlflow ui\n",
-    "!poetry run mlflow gc\n",
+    "!type mlflow > /dev/null 2>&1 && poetry run mlflow gc\n",
     "\n",
     "# Measure processing time\n",
     "start_time = time.perf_counter()"
