--- a/ansible-playbook/roles/jupyter/files/notebook_templates/experiments/exp.ipynb
+++ b/ansible-playbook/roles/jupyter/files/notebook_templates/experiments/exp.ipynb
@@ -154,9 +154,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "denshosen2021",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "denshosen2021"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
