--- a/ansible-playbook/roles/emacs/files/emacs/README.org
+++ b/ansible-playbook/roles/emacs/files/emacs/README.org
@@ -1,6 +1,6 @@
 #+title: Configurations for Emacs
 #+author: mkt3rb
-#+startup: contentx
+#+startup: content
 #+startup: nohideblocks
 
 * Initialize
