--- a/ansible-playbook/roles/emacs/files/emacs/README.org
+++ b/ansible-playbook/roles/emacs/files/emacs/README.org
@@ -191,7 +191,7 @@
        ((modus-themes-italic-constructs . t)
         (modus-themes-bold-constructs . t)
         (modus-themes-region . '(bg-only no-extend))
-        (modus-themes-syntax . 'faint)
+        (modus-themes-syntax . '(faint))
         (modus-themes-diffs . 'deuteranopia)
         )
        :config
