add tramp docker

--- a/ansible-playbook/roles/emacs/files/emacs/README.org
+++ b/ansible-playbook/roles/emacs/files/emacs/README.org
@@ -800,6 +800,37 @@
        :ensure t
        :commands add-node-modules-path)
    #+END_SRC
+** tramp
+   #+BEGIN_SRC emacs-lisp
+     (leaf tramp
+       :ensure t
+       :init
+       ;; Disable version control on tramp buffers to avoid freezes.
+       (setq vc-ignore-dir-regexp
+             (format "\\(%s\\)\\|\\(%s\\)"
+                     vc-ignore-dir-regexp
+                     tramp-file-name-regexp))
+       (setq tramp-default-method "ssh")
+       (setq tramp-auto-save-directory
+             (expand-file-name "tramp-auto-save" user-emacs-directory))
+       (setq tramp-persistency-file-name
+             (expand-file-name "tramp-connection-history" user-emacs-directory))
+       (setq password-cache-expiry nil)
+       (setq tramp-use-ssh-controlmaster-options nil)
+       :config
+       (customize-set-variable 'tramp-ssh-controlmaster-options
+                               (concat
+                                "-o ControlPath=/tmp/ssh-tramp-%%r@%%h:%%p "
+                                "-o ControlMaster=auto -o ControlPersist=yes"))
+       (with-eval-after-load 'lsp-mode
+         (lsp-register-client
+          (make-lsp-client :new-connection (lsp-tramp-connection "pyright")
+                           :major-modes '(python-mode)
+                           :remote? t
+                           :server-id 'pyright-remote))
+         )
+       )
+   #+END_SRC
 * major-mode
 ** lsp-mode
    #+BEGIN_SRC emacs-lisp
