--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -182,23 +182,18 @@
    #+END_SRC
 
 ** modus-theme
-   doom-themeが見やすいので、一旦無効化。
    #+BEGIN_SRC emacs-lisp
-     (leaf modus-themes
-       :ensure t
-       :require t
+     (leaf *modus-themes
        :custom
        ((modus-themes-italic-constructs . t)
-        (modus-themes-bold-constructs . t)
-        (modus-themes-region . '(bg-only no-extend))
-        (modus-themes-syntax . '(faint))
-        (modus-themes-diffs . 'deuteranopia)
+        (modus-themes-bold-constructs   . t)
+        (modus-themes-region            . '(bg-only no-extend))
+        (modus-themes-syntax            . '(faint))
+        (modus-themes-diffs             . 'deuteranopia)
         )
        :config
-       (modus-themes-load-themes)
-       (modus-themes-load-vivendi))
+       (load-theme 'modus-vivendi))
    #+END_SRC
-
 * UI
 ** mac
    #+BEGIN_SRC emacs-lisp
