--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -314,13 +314,13 @@
                                                  (("<\\([[:alnum:]-]+\\)>") . ("\\1"))))
                 (which-key-mode . t)))
    #+END_SRC
-** smartparens
+** puni
    #+BEGIN_SRC emacs-lisp
-     (leaf smartparens
+     (leaf puni
        :ensure t
-       :hook (after-init-hook . smartparens-global-strict-mode)
-       :require smartparens-config
-       :custom ((electric-pair-mode . nil)))
+       :init
+       (puni-global-mode)
+       :custom ((electric-pair-mode . t)))
    #+END_SRC
 ** ace-window
    #+BEGIN_SRC emacs-lisp
