--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -993,6 +993,7 @@
      (leaf org-capture
        :leaf-defer t
        :after org
+       :if (file-directory-p my:org-directory)
        :commands (org-capture)
        :config
        (setq org-capture-templates `(("i" " Inbox" entry (file+headline org-gtd-file "Inbox")
@@ -1147,10 +1148,10 @@
 ** git
    #+BEGIN_SRC emacs-lisp
      (leaf *git-tools
+       :config
        (leaf git-modes
          :ensure t)
        (leaf magit
-         :when (version<= "25.1" emacs-version)
          :ensure t
          :preface (defun c/git-add ()
                     "Add anything."
